// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonText control to the left 1`] = `
<ButtonText
  className="test-class"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  justify={0}
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "blue",
      "borderColor": "green",
      "color": "white",
    }
  }
  testing={true}
  text="test text"
  theme={null}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button-text ripple test-class"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "blue",
          "borderColor": "green",
          "color": "white",
        }
      }
      visible={true}
    >
      <div
        className="ui-button-text ripple test-class sc-gzVnrw fXYEZz"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "blue",
            "borderColor": "green",
            "color": "white",
          }
        }
      >
        <styled.div
          justify={0}
          sizing="normal"
        >
          <div
            className="sc-bZQynM fzRQIP"
          >
            test text
          </div>
        </styled.div>
        <Icon
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "tooltipBackgroundColor": "gray",
                "tooltipForegroundColor": "white",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.i
              className="ui-icon fa fa-fw fa-bomb"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip=""
              visible={true}
              width=""
              xcss={null}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                contentEditable={false}
                direction="right"
                disabled={false}
                height=""
                id=""
                selected={false}
                style={Object {}}
                width=""
              />
            </styled.i>
          </ThemeProvider>
        </Icon>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonText>
`;

exports[`Test disabling of a ButtonText control 1`] = `
<ButtonText
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  justify={1}
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text=""
  theme={null}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button-text nohover"
      disabled={true}
      onClick={[Function]}
      style={Object {}}
      visible={true}
    >
      <div
        className="ui-button-text nohover sc-gzVnrw iFIHiP"
        disabled={true}
        onClick={[Function]}
        style={Object {}}
      >
        <Icon
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "tooltipBackgroundColor": "gray",
                "tooltipForegroundColor": "white",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.i
              className="ui-icon fa fa-fw fa-bomb"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip=""
              visible={true}
              width=""
              xcss={null}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                contentEditable={false}
                direction="right"
                disabled={false}
                height=""
                id=""
                selected={false}
                style={Object {}}
                width=""
              />
            </styled.i>
          </ThemeProvider>
        </Icon>
        <styled.div
          justify={1}
          sizing="normal"
        >
          <div
            className="sc-bZQynM dGKNUn"
          />
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonText>
`;

exports[`Test making a ButtonText control invisible 1`] = `
<ButtonText
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  justify={1}
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text=""
  theme={null}
  tooltip=""
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button-text ripple"
      disabled={false}
      onClick={[Function]}
      style={Object {}}
      visible={false}
    >
      <div
        className="ui-button-text ripple sc-gzVnrw gwzSdQ"
        disabled={false}
        onClick={[Function]}
        style={Object {}}
      >
        <Icon
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "tooltipBackgroundColor": "gray",
                "tooltipForegroundColor": "white",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.i
              className="ui-icon fa fa-fw fa-bomb"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip=""
              visible={true}
              width=""
              xcss={null}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                contentEditable={false}
                direction="right"
                disabled={false}
                height=""
                id=""
                selected={false}
                style={Object {}}
                width=""
              />
            </styled.i>
          </ThemeProvider>
        </Icon>
        <styled.div
          justify={1}
          sizing="normal"
        >
          <div
            className="sc-bZQynM dGKNUn"
          />
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonText>
`;

exports[`Test retrieval of ButtonText props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "id": "",
  "imageFile": "",
  "justify": 1,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noicon": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "text": "",
  "theme": null,
  "tooltip": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
